# juwanslave

./: AGV  AGV 모터 코드  README.md  agv_debug_log.txt  agv_pose_liv_plot.py  agv_pose_logger.py  amcl.csv  analyze_rosbag.py  arm.py  arm_new.py  camera_cali.py  check_yaw.py  cmd_val.py  cmdvel.csv  db_agv.py  db_defect.py(로봇암  debug.bag  esp32통신 코드  frames.gv  imu.csv  imu9축센서 아두이노용  imu_fixer.py  imu_odom_yawrate.py  morning.txt  move_1m.py  myAGV.cpp  myAGV.h  mycode.py  odom.csv  odom_basefootprint_log_20251210_184334.csv  odom_basefootprint_logger.py  odom_record.py  odom_rotation_record.py  plc db코드  plc slave pc 통신 코드(DB인설트 포함)  plot_all.py  plot_tranjectories.py  robot_localization_debug.txt  rotate_360.py  rotation_diff.txt  (+13 more)
devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
my master is taehwan/: taehwan is king.txt
src/: dummy_robot_arm_detect.py
src/agv_task_manager/: CMakeLists.txt
src/myagv_odometry/: CMakeLists.txt
src/plc_interface/: package.xml  setup.cfg  setup.py
src/plc_interface/plc_interface/: db.py  plc_node.py
src/ros_controller_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ros_controller_pkg/msg/: PlcStatus.msg
src/ros_controller_pkg/ros_controller_pkg/: ros_controller.py
src/stm_controller/: package.xml  setup.cfg  setup.py
src/yolo_detector/: CMakeLists.txt  package.xml
tttt/: taehwan babo.txt
young/final/: arm_call.py  arm_db.py  arm_driver_node.py  cali.py  calibration.py  check.py  check2.py  coord_key.py  cut.py  db_func.py  get_angle.py  get_cali.py  get_m.py  gripper.py  hand_cali.py  j6test.py  mission2.py  padim.py  plc_node.py  ros_controller.py  task_manager_node.py  test_plc_trigger.py  test_plc_trigger_final.py  test_plc_trigger_origin.py  test_vision.py  (+6 more)
(+206 files in other folders)
