<?xml version="1.0"?>
<package format="3">
  <name>plc_interface</name>
  <version>0.0.1</version>
  <description>PLC Modbus RTU Interface for ROS2</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>my_robot_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
